Am adaugat primul endpoint pentru raportul unui attempt